--- a/.example.env
+++ b/.example.env
@@ -1,4 +1,3 @@
 PORT=2030
 MONGODB_URI=mongodb://localhost:27017/role_based_access
-DB_NAME-=role_based_access
-SESSION_SECRET=keyboard cat
+SESSION_SECRET=
